2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* system.h system.cpp (and client classes)
	  - major cleanup. More keyboard info available.
	  - removed silly ->draw_*image in system. Adapted all code.

2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* all source and build files (makefiles, KDE, VC6)
	  - moved to subdir "src"

2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* global_data.h global_data.cpp model.cpp
	  - replaced path DEFINEs by inline functions.

2003-11-15  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.cpp
	  - combined display lists with vertex arrays.
	    Now maximum performance for displaying meshes is obtained.

2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* everywhere, beginning at game.cpp
	  - removed compile dependencies
	* user_interface.cpp
	  - first bits of terrain simulation
	    map position is intentionally wrong for testing.

2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* image.h image.cpp texture.h texture.cpp font.cpp global_data.cpp
	  - removed silly "morealpha" option.
	    made texture attributes more flexible (direct passing of OpenGL
	    codes is posssible).

2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp user_interface.h
	  - again i implemented a new water code.
	    this is much like the original code:
	    A large quad of waves is drawn around the view position.
	    The new water is independent from view direction, and much
	    faster than the old water implementations because it uses
	    display lists.
	    The code can be adapted to PC's performance.
	    Wave height and normals are computed and used for ship's
	    rotation giving a realistic behaviour.

2003-10-30  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - updated and corrected simulation as far as possible.
	    sun and moon seem to be too small, but numerical results seem
	    correct?!
	    simulation is roughly accurate by rise/set times and degrees for