@@ -64,7 +64,6 @@ game::game(submarine::types subtype, unsigned cvsize, unsigned cvesc, unsigned t
 	};
 	
 	compute_max_view_dist();
-	generate_clouds();
 	double mvd = get_max_view_distance();
 	
 	convoy* cv = new convoy(*this, (convoy::types)(cvsize), (convoy::esctypes)(cvesc));
@@ -95,7 +94,6 @@ game::game(parser& p) : running(true), time(0)
 	player = 0;
 	ui = 0;
 	compute_max_view_dist();
-	generate_clouds();
 	while (!p.is_empty()) {
 		bool nextisplayer = false;
 		if (p.type() == TKN_PLAYER) {
@@ -168,25 +166,6 @@ void game::compute_max_view_dist(void)
 	if (dt < 2) { max_view_dist = 5000 + 25000*fmod(dt,1); return; }
 	if (dt < 3) { max_view_dist = 30000; return; }
 	max_view_dist = 30000 - 25000*fmod(dt,1);
-}
-
-game::cloud::cloud()
-{
-	// scale cloud position by 0.1 to avoid frustum collisions
-	pos = vector3(rnd()*10000-5000, rnd()*10000-5000, rnd()*1500+500);
-	size = (rnd()*500+100);
-	type = rnd(NR_CLOUD_TEXTURES);
-	if (type == 1) size += 600;
-}
-	
-void game::generate_clouds(void)
-{
-	clouds.clear();
-	unsigned nr_clouds = 50;
-	clouds.reserve(nr_clouds);
-	for (unsigned i = 0; i < nr_clouds; ++i)
-		clouds.push_back(cloud());
-	sort(clouds.begin(), clouds.end());
 }
 
 void game::simulate(double delta_t)
